# gfw

./: .gitignore  CMakeLists.txt  TODO  build-test.bat  build.py  gen-open-sln.bat  main.vim  tags.vim  vim
antlr/: CMakeLists.txt  antlr-config.cmake
antlr/scripts/: tok2def.py
boost/: CMakeLists.txt  boost-config.cmake
common/: CMakeLists.txt  allocator.cpp  allocator.h  atomic.cpp  autoref.h  common-config.cmake  counter.h  crc32.h  critical_section.cpp  critical_section.h  file.cpp  file.h  futex.h  platform.h  trace.cpp  trace.h  typedefs.h  window.h
common/include/common/: atomic.h  autoref.h  callback.h  condition_variable.h  condition_variable_impl.h  crc32.h  event.h  exception.inl  file.h  mutex.h  mutex_impl.h  platform.h  runnable.h  shared_ptr_typedefs.h  string_table.h  threads.h  trace.h
common/source/: atomic.cpp  condition_variable.cpp  counter.cpp  crc32.cpp  critical_section.cpp  event.cpp  file.cpp  mutex.cpp  string_table.cpp  threads.cpp  trace.cpp
common/tests/: CMakeLists.txt  allocator.cpp  autoref.cpp  condition_variable.cpp  config.h  config.h.in  event.cpp  file.cpp  threads.cpp
gfw/: CMakeLists.txt  allocator.cpp  allocator.h  gfw-config.cmake  gfw.cpp  gfw.h
gfw-samples/: CMakeLists.txt
gfw-samples/source/: shadow_map.cpp
gfw/common/: window.cpp  window.h
gfw/graphics/base/: buffer.h  clear_params.h  context.h  device.h  format.h  render_buffer.h  resource.h  shader.h  vertex_attribute.h
gfw/graphics/common/: context.cpp  context.h  device.cpp  device.h  format.cpp  format.h
gfw/graphics/opengl/: CMakeLists.txt  buffer.cpp  buffer.h  context.cpp  context.h  device.cpp  device.h  drawing_context.cpp  drawing_context.h  functions.h  functions_platform.h  platform.cpp  platform.h  shader.cpp  shader.h  window.cpp  window.h
gfw/include/base/gfw/: gfw.h
gfw/include/gfw/: blend_state.h  buffer.h  context.h  depth_stencil_state.h  device.h  device_child.h  draw_params.h  effect.h  factory.h  format.h  gfw.h  input_layout.h  mesh.h  mesh_builder.h  pass.h  rasterizer_state.h  render_target.h  resource.h  sampler_state.h  semantic.h  shader.h  shader_reflect.h  shader_stage.h  swap_chain.h  technique.h  texture.h  texture_utils.h  types_fwd.h  vertex_attribute.h
gfw/include/gfw/base/: blend_state.h  buffer.h  clear_params.h  compare.h  context.h  depth_stencil_state.h  device.h  device_child.h  draw_params.h  effect.h  factory.h  format.h  input_layout.h  mesh.h  mesh_builder.h  primitive.h  rasterizer_state.h  render_buffer.h  resource.h  sampler_state.h  shader.h  shader_reflect.h  texture.h  types_fwd.h  vertex_attribute.h  window.h
gfw/include/gfw/common/: device_child.h  device_child.inl  effect.h  factory.h  format.h  mesh.h  mesh_builder.h  semantic.h  shader_reflect.h  shader_reflect.inl  shader_stage.h
gfw/include/gfw/ogl/: blend_state.h  buffer.h  context.h  depth_stencil_state.h  device.h  drawing_context.h  functions.h  functions_platform.h  platform.h  rasterizer_state.h  sampler_state.h  shader.h
gfw/include/gfw/ogl2/: functions.h  limits.h
gfw/include/gfw/ogl4/: drawing_context.h
gfw/platform/: CMakeLists.txt  platform.h
gfw/platform/base/: window.h
gfw/platform/win/: platform.cpp  window.cpp  window.h
gfw/scripts/ogl4/: build.cmake
gfw/source/common/: effect.cpp  factory.cpp  format.cpp  mesh.cpp  mesh_builder.cpp  semantic.cpp
gfw/source/fxc/: CMakeLists.txt  main.cpp
gfw/source/gfw/fxc/: CMakeLists.txt  main.cpp
gfw/source/gfw/gfwc/: CMakeLists.txt  main.cpp
gfw/source/gfw/pipeline/: CMakeLists.txt
gfw/source/gfw/runtime/: CMakeLists.txt
gfw/source/gfw/sb/: CMakeLists.txt  main.cpp
gfw/source/gfw/shared/: CMakeLists.txt  effect.h  pass.h  scene_binary.h  semantic.cpp  shader.h  (+3 more)
gfw/source/ogl/: blend_state.cpp  buffer.cpp  context.cpp  depth_stencil_state.cpp  device.cpp  drawing_context.cpp  platform.cpp  rasterizer_state.cpp  sampler_state.cpp  shader.cpp
gfw/source/ogl2/: device.cpp
gfw/source/ogl4/: blend_state.cpp  buffer.cpp  context.cpp  depth_stencil_state.cpp  device.cpp  drawing_context.cpp  format.cpp  input_layout.cpp  platform.cpp  rasterizer_state.cpp  resource.cpp  sampler_state.cpp  shader.cpp  shader_reflect.cpp  shader_stage.cpp  texture.cpp
gfw/source/pipeline/: CMakeLists.txt
gfw/source/runtime/: CMakeLists.txt
gfw/source/win/: window.cpp
gfw/tests/: CMakeLists.txt  config.h.in  draw.fx  draw_color_flat.fx  draw_frag.glsl  draw_texture.fx  draw_vert.glsl  gfw_tests.cpp  gfw_tests.h  tests.cpp  texture.cpp
gfw/tests/data/: draw.fx  quad.dae  sphere.dae
gfw/tests/pipeline/: CMakeLists.txt  draw.fx  pipeline.cpp  soldier.fx
gfw/tests/runtime/: CMakeLists.txt  draw_red.fx  gfw_tests.cpp  gfw_tests.h  main.cpp  reflect.fx  runtime.cpp  test.cpp  test.h  tests.cpp  texture.cpp  window.cpp  window.h
gfw_pipeline/: CMakeLists.txt  gfw_pipeline-config.cmake
gfw_pipeline/data/: C.g  FX.g
gfw_pipeline/source/common/: effect_builder.cpp  parse_tree.cpp  parser.cpp
gfw_pipeline/tests/: CMakeLists.txt  draw.fx
gtest/: CMakeLists.txt  gtest-config.cmake
profiler/: CMakeLists.txt  event.h  event_bucket.h  logger.cpp  logger.h  manager.cpp  manager.h  meson.cpp  meson.h  platform.cpp  platform.h  profiler-config.cmake  profiler.cpp  profiler.h  region.cpp  region.h  token.cpp  token.h  types.h
profiler/include/profiler/: config.h  logger.h  meson.h  profiler.h  region.h  token.h
profiler/source/: logger.cpp  region.cpp  token.cpp
ripples/: CMakeLists.txt
ripples/data/: draw.cg  draw.fx  draw.ps.glsl  draw.vs.glsl  materials.material
ripples/include/ripples/: stdafx.h
ripples/source/: main.cpp  stdafx.cpp
serialization/: CMakeLists.txt  serialization-config.cmake
serialization/include/serialization/: input_archive.h  named_value.h  output_archive.h  serialize.h
serialization/tests/: CMakeLists.txt
taskman/tests/: CMakeLists.txt  tests.cpp
threadpool/: CMakeLists.txt  threadpool-config.cmake
threadpool/include/threadpool/: threadpool.h
threadpool/source/win/: threadpool.cpp
threadpool/tests/: CMakeLists.txt  tests.cpp
(+297 files in other folders)
